@@ -564,7 +564,6 @@ if test "$gfsm_doc_formats" != "none" ; then
 	gfsmdifference.gog \
 	gfsmdraw.gog \
 	gfsmheader.gog \
-	gfsmindex.gog \
 	gfsminfo.gog \
 	gfsmintersect.gog \
 	gfsminvert.gog \
@@ -583,6 +582,7 @@ if test "$gfsm_doc_formats" != "none" ; then
 	gfsmunion.gog \
 	gfsmviterbi.gog \
 	"
+#	gfsmindex.gog 
   for g in $DOC_MAN1_GOGS ; do
     AC_CONFIG_LINKS(doc/programs/${g}:src/programs/${g})  
   done
