@@ -55,8 +55,6 @@ libgfsm_la_SOURCES = \
 	gfsmArc.c \
 	gfsmArcIter.c \
 	gfsmArcIndex.c \
-	gfsmIndexed.c \
-	gfsmIndexedIO.c \
 	gfsmState.c \
 	gfsmStateSet.c \
 	gfsmAutomaton.c \
@@ -71,6 +69,9 @@ libgfsm_la_SOURCES = \
 	gfsmRegex.lex.l \
 	gfsmRegex.tab.y \
 	gfsmRegexCompiler.c
+
+
+#libgfsm_la_SOURCES += gfsmIndexed.c gfsmIndexedIO.c
 
 #	gfsmHead.c 
 
@@ -105,8 +106,6 @@ pkginclude_HEADERS = \
 	gfsmArc.h \
 	gfsmArcIter.h \
 	gfsmArcIndex.h \
-	gfsmIndexed.h \
-	gfsmIndexedIO.h \
 	gfsmState.h \
 	gfsmStateSet.h \
 	gfsmAutomaton.h \
@@ -122,6 +121,8 @@ pkginclude_HEADERS = \
 	gfsm.h
 
 #	gfsmHead.h 
+
+#pkginclude_HEADERS += gfsmIndexed.h gfsmIndexedIO.h
 
 ## --- no-install headers
 #noinst_HEADERS = nopackage.h
