@@ -1,0 +1,7 @@
+0	1	0	1	1
+1	2	1	2	12
+2	2	2	2	22
+2	20
+1	3	1	3	13
+3	4	3	4	34
+4	40	
