@@ -1,6 +1,9 @@
 Change log for gfsm
 
 v0.0.9 Mon, 05 Nov 2007 12:00:03 +0100
+   + added "source" field to gfsmArc: source gfsmStateId
+     - fixed gfsm_automaton_reverse() and gfsmReverseArcIndex to use new feature
+     - added additional argument to various methods in gfsmArc.h to deal with new datum
    + added shell tool gfsmindex, source files gfsmIndexed.[ch], gfsmIndexedIO.[ch]
      - the "right way" to do this would be to go for a truly abstract automaton API,
        but the price (virtualization, extraneous flag & limit checking, etc.) is daunting
